# spalinalg

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  x.sh
.github/workflows/: default.yaml
book/: book.toml
book/src/: introduction.md
src/: coo.rs  csc.rs  csr.rs  dok.rs  lib.rs  scalar.rs
src/csc/: add.rs  conv.rs
src/csc/conv/: coo.rs  csr.rs  dok.rs
src/csc/ops/: add.rs  mul.rs  neg.rs  sub.rs
src/csr/: add.rs  conv.rs  ops.rs
src/csr/conv/: coo.rs  csc.rs  dok.rs
src/csr/ops/: mul.rs  neg.rs  sub.rs
